EngineDriver: fix some warnings and update copyright.  This will be production 2.6